keycloak/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.1
          command:
            - "start"
            - "--https-key-store-file=/etc/x509/https/keycloak.server.keystore.p12"
            - "--https-key-store-password=$(KC_KEYSTORE_PASSWORD)"
            - "--https-key-store-type=PKCS12"
            - "--https-trust-store-file=/etc/x509/https/keycloak.client.truststore.p12"
            - "--https-trust-store-password=$(KC_KEYSTORE_PASSWORD)"
            - "--https-trust-store-type=PKCS12"
            - "--https-client-auth=request"
            - "--http-enabled=true"
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: keycloak-certs
              mountPath: /etc/x509/https
              readOnly: true
      volumes:
        - name: keycloak-certs
          secret:
            secretName: keycloak-certs
