keycloak/templates/keycloak-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingressroute
  namespace: opa
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`identity.virtual33.myguest.virtualbox.org`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
